[package]
name = "rust-learn"
version = "0.1.0"
authors = ["Bora Guven <guvenbe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mylib"
path = "src/mylib.rs"
[dependencies]
rand = "0.8.5"
crossbeam ="0.8.2"
humantime = "2.1.0"
color-eyre = "0.6.3"
colored = "3.0.0"
log = "0.4.17"
env_logger = "0.9.0"
thiserror = "1.0.48"
anyhow = "1.0.75"
error-stack = "0.1.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
num-bigint = "0.4.6"
num-traits = "0.2.19"
chrono = "0.4.39"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
crossbeam-channel = "0.5.8"
parking_lot = "0.12.3"

[[bin]]
name = "debug_target"
path = "src/main.rs"
